syntax = "proto3";
package pokt.types;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/lostak/pokt/types";

message SpotPrice {
    google.protobuf.Timestamp time = 1;
    double price = 2;
}

message PriceHistory {
    string tokenName = 1;
    string geckoId = 2;
    string baseDenomId = 3;
    repeated SpotPrice prices = 4;    
}

message AmountHistory {    
    repeated double amount = 1;
    /*
        Time recorded is when the amount is updated and added to the list on manual user input 
    */
    repeated google.protobuf.Timestamp update_times = 2;
    repeated double price = 3;
}

message Token {
    string name = 1;
    string geckoId = 2;
    AmountHistory amounts = 3;
    uint64 lastPrice = 4;
}

message Chain {
    string name = 1; 
    string addr = 2;
    repeated Token tokens = 3;
    google.protobuf.Timestamp last_updated = 4;
}

message Account { 
    string name = 1;

    repeated Chain chains = 3;
}

message Portfolio { 
    string name = 1;
    repeated PriceHistory trackedTokens = 2;
    repeated Account accounts = 3; 
}